@@ -92,3 +92,7 @@
 
 	* 1.7.3 release
 
+2012-12-17 Vincent Torri
+
+	* Add XML output to doc
+	* Add installation rule for doc
